--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <!-- second div -->
         <div class="row" align = "center" id = "second_div">
             <div class="col-md-4" id = "input">
-                <a href = "http://www.bhphotovideo.com/c/product/279582-USA/Canon_8806A002_EF_17_40mm_f_4L_USM.html" target="_blank">
-                    <img src = "http://static.bhphoto.com/images/images500x500/1445360805000_279582.jpg" alt = "Canon 17-40mm" onmouseover="bigImg(this)" onmouseout="normalImg(this)" width="256" height="256" title = "Canon 17-40mm f/4L $699.99">
+                <a href = "http://www.amazon.com/gp/product/B00ZDNNRB8?ref_=cm_sw_r_awd_Ags2vb72JTE7Z" target="_blank">
+                    <img src = "http://ecx.images-amazon.com/images/I/31O7kGYGMBL.jpg" alt = "Xbox One Elite Controller" onmouseover="bigImg(this)" onmouseout="normalImg(this)" width="256" height="256" title = "Xbox One Elite Controller $149.99">
                 </a>
             </div>
             <div class="col-md-4" id = "input">
