--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
             }
         ?>-->
         <div class="row" align = "center" id = "first_div">
-            <div class="col-md-4" id = "input">
-                <a href = "http://www.bhphotovideo.com/c/product/279582-USA/Canon_8806A002_EF_17_40mm_f_4L_USM.html" target="_blank">
-                    <img src = "http://static.bhphoto.com/images/images500x500/1445360805000_279582.jpg" alt = "Canon 17-40mm" onmouseover="square_bigImg(this)" onmouseout="square_normalImg(this)" width="256" height="256" title = "Canon 17-40mm f/4L $699.99">
-                </a>
-            </div>
-            <div class="col-md-4" id = "input">
-                <a href = "http://www.bhphotovideo.com/c/product/162614-USA/Canon_2512A002_Wide_Angle_EF_35mm.html" target="_blank">
+            <div class="col-md-4" id = "input_left">
+                <a href = "canon_35_f1.4.html" target="_blank">
                     <img src = "http://static.bhphoto.com/images/images500x500/1266532327000_162614.jpg" alt = "Canon 35mm 1.4" onmouseover="square_bigImg(this)" onmouseout="square_normalImg(this)" width="256" height="256" title = "Canon 35mm f/1.4L $1099.99">
                 </a>
             </div>
-            <div class="col-md-4" id = "input">
-                <a href = "http://www.bhphotovideo.com/c/product/457680-USA/Canon_1257B002AA_Normal_EF_50mm_f_1_2L.html" target="_blank">
+            <div class="col-md-4" id = "input_middle">
+                <a href = "canon_17_40_f4.html" target="_blank">
+                    <img src = "http://static.bhphoto.com/images/images500x500/1445360805000_279582.jpg" alt = "Canon 17-40mm" onmouseover="square_bigImg(this)" onmouseout="square_normalImg(this)" width="256" height="256" title = "Canon 17-40mm f/4L $799.99">
+                </a>
+            </div>
+            <div class="col-md-4" id = "input_right">
+                <a href = "canon_50_f1.2.html" target="_blank">
                     <img src = "http://static.bhphoto.com/images/multiple_images/images500x500/1445870363000_IMG_150750.jpg" alt = "Canon 50mm 1.2" onmouseover="square_bigImg(this)" onmouseout="square_normalImg(this)" width="256" height="256" title = "Canon 50mm f/1.2L $1399.99">
                 </a>
             </div>
@@ -52,38 +52,33 @@
         
         <!-- second div -->
         <div class="row" align = "center" id = "second_div">
-            <div class="col-md-4" id = "input">
+            <div class="col-md-4" id = "input_left">
+                <a href = "LG_34_Inch.html" target="_blank">
+                    <img src = "http://ecx.images-amazon.com/images/I/41jSLyVcAWL.jpg" alt = "LG 34-Inch LED" onmouseover="this.width='450'; this.height='350'" onmouseout="this.width='350'; this.height='256'" width="350" height="256" title = "LG 34-Inch LED Monitor $719.99">
+                </a>
+            </div>
+            <div class="col-md-4" id = "input_middle">
                 <a href = "http://www.amazon.com/gp/product/B00ZDNNRB8?ref_=cm_sw_r_awd_Ags2vb72JTE7Z" target="_blank">
-                    <img src = "http://ecx.images-amazon.com/images/I/31O7kGYGMBL.jpg" alt = "Xbox One Elite Controller" onmouseover="this.width='450'; this.height='350'" onmouseout="this.width='350'; this.height='256'" width= "350" height = "256" title = "Xbox One Elite Controller $149.99">
+                    <img src = "http://www.gamestop.com/gs/images/content-pdp/xbox-one-elite-wireless-controller_122872/Image5.jpg" alt = "Xbox One Elite Controller" onmouseover="this.width='450'; this.height='400'" onmouseout="this.width='300'; this.height='250'" width= "300" height = "250" title = "Xbox One Elite Controller $149.99">
                 </a>
             </div>
-            <div class="col-md-4" id = "input">
-                <a href = "http://www.bhphotovideo.com/c/product/162614-USA/Canon_2512A002_Wide_Angle_EF_35mm.html" target="_blank">
-                    <img src = "http://static.bhphoto.com/images/images500x500/1266532327000_162614.jpg" alt = "Canon 35mm 1.4" onmouseover="square_bigImg(this)" onmouseout="square_normalImg(this)" width="256" height="256" title = "Canon 35mm f/1.4L $1099.99">
-                </a>
-            </div>
-            <div class="col-md-4" id = "input">
-                <a href = "http://www.bhphotovideo.com/c/product/457680-USA/Canon_1257B002AA_Normal_EF_50mm_f_1_2L.html" target="_blank">
-                    <img src = "http://static.bhphoto.com/images/multiple_images/images500x500/1445870363000_IMG_150750.jpg" alt = "Canon 50mm 1.2" onmouseover="square_bigImg(this)" onmouseout="square_normalImg(this)" width="256" height="256" title = "Canon 50mm f/1.2L $1399.99">
+            <div class="col-md-4" id = "input_right">
+                <a href = "moto_360.html" target="_blank">
+                    <img src = "http://ecx.images-amazon.com/images/I/41W3Ti5rYxL.jpg" alt = "Moto 360 2nd Gen" title = "Moto 360 2nd Gen w/ Black Leather" onmouseover="square_bigImg(this)" onmouseout="square_normalImg(this)" height="256" width="256">
                 </a>
             </div>
         </div>
         
         <!-- third div -->
         <div class="row" align = "center" id = "third_div">
-            <div class="col-md-4" id = "input">
-                <a href = "http://www.bhphotovideo.com/c/product/279582-USA/Canon_8806A002_EF_17_40mm_f_4L_USM.html" target="_blank">
-                    <img src = "http://static.bhphoto.com/images/images500x500/1445360805000_279582.jpg" alt = "Canon 17-40mm" onmouseover="square_bigImg(this)" onmouseout="square_normalImg(this)" width="256" height="256" title = "Canon 17-40mm f/4L $699.99">
+            <div class="col-md-6" id = "input_left">
+                <a href = "http://www.porsche.com/usa/models/911/911-gt3-rs/" target="_blank">
+                    <img src = "images/gt3rs.jpg" alt = "Porsche 911 GT3 RS" title = "Porsche 911 GT3 RS" width = 65% height = 65%>
                 </a>
             </div>
-            <div class="col-md-4" id = "input">
-                <a href = "http://www.bhphotovideo.com/c/product/162614-USA/Canon_2512A002_Wide_Angle_EF_35mm.html" target="_blank">
-                    <img src = "http://static.bhphoto.com/images/images500x500/1266532327000_162614.jpg" alt = "Canon 35mm 1.4" onmouseover="square_bigImg(this)" onmouseout="square_normalImg(this)" width="256" height="256" title = "Canon 35mm f/1.4L $1099.99">
-                </a>
-            </div>
-            <div class="col-md-4" id = "input">
-                <a href = "http://www.bhphotovideo.com/c/product/457680-USA/Canon_1257B002AA_Normal_EF_50mm_f_1_2L.html" target="_blank">
-                    <img src = "http://static.bhphoto.com/images/multiple_images/images500x500/1445870363000_IMG_150750.jpg" alt = "Canon 50mm 1.2" onmouseover="square_bigImg(this)" onmouseout="square_normalImg(this)" width="256" height="256" title = "Canon 50mm f/1.2L $1399.99">
+            <div class="col-md-6" id = "input_right">
+                <a href = "https://www.mbusa.com/mercedes/vehicles/model/class-S/model-S63C4" target="_blank">
+                    <img src = "images/s63.jpg" alt = "Mercedes-Benz S63 AMG Coupe" title = "Mercedes-Benz S63 AMG Coupe" width = 65% height = 65%>
                 </a>
             </div>
         </div>
